<?xml version="1.0"?>
<package>
  <name>jaguar4x4wheel_base</name>
  <version>0.2.4</version>
  <description>Clearpath Jaguar4x4Wheel robot driver</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>

  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jaguar4x4wheel_base</url>
  <url type="bugtracker">https://github.com/jaguar4x4wheel/jaguar4x4wheel_robot/issues</url>
  <url type="repository">https://github.com/husly/jaguar4x4wheel_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>jaguar4x4wheel_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>jaguar4x4wheel_control</run_depend>
  <run_depend>jaguar4x4wheel_msgs</run_depend>
  <run_depend>jaguar4x4wheel_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>control_toolbox</run_depend>

  <export></export>
</package>
