<?xml version="1.0"?>
<package>
  <name>jaguar4x4wheel_bringup</name>
  <version>0.0.0</version>
  <description>The jaguar4x4wheel_bringup package</description>

  <maintainer email="vincentrou@gmail.com">V. Rousseau</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/jaguar4x4wheel_bringup</url> -->

  <author email="vincentrou@gmail.com">V. Rousseau</author>

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!--<run_depend>jaguar4x4wheel_base</run_depend>
  <run_depend>jaguar4x4wheel_control</run_depend>
  <run_depend>jaguar4x4wheel_description</run_depend>-->
  <!--<run_depend>o3m151_driver</run_depend>-->
  <run_depend>xsens_driver</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>nmea_comms</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>robot_localization</run_depend>

</package>
