<?xml version="1.0"?>
<package>
  <name>jaguar4x4wheel_bringup</name>
  <version>0.1.0</version>
  <description>The jaguar4x4wheel_bringup package</description>

  <author email="vincentrou@gmail.com">Vincent Rousseau</author>

  <maintainer email="vincentrou@gmail.com">Vincent Rousseau</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/jaguar4x4wheel_bringup</url> -->

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!--<run_depend>jaguar4x4wheel_base</run_depend>
  <run_depend>jaguar4x4wheel_control</run_depend>
  <run_depend>jaguar4x4wheel_description</run_depend>-->
  <!--<run_depend>o3m151_driver</run_depend>-->
  <run_depend>joy</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>laser_proc</run_depend>
  <run_depend>urg_c</run_depend>
  <run_depend>nmea_comms</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>robot_localization</run_depend>

</package>
