<?xml version="1.0"?>
<package>
  <name>jaguar4x4wheel_control</name>
  <version>0.2.6</version>
  <description>Jaguar 4x4 wheel controller configurations</description>

  <author email="vincentrou@gmail.com">Vincent Rousseau</author>
  <maintainer email="vincentrou@gmail.com">Vincent Rousseau</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jaguar4x4wheel_control</url>
  <url type="bugtracker">https://github.com/jaguar4x4wheel/jaguar4x4wheel/issues</url>
  <url type="repository">https://github.com/jaguar4x4wheel/jaguar4x4wheel</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
