<?xml version="1.0"?>
<package>
  <name>jaguar4x4wheel_description</name>
  <version>0.0.0</version>
  <description>The jaguar4x4wheel_description package</description>

  <maintainer email="vincentrou@gmail.com">Vincent Rousseau</maintainer>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- <url type="website">http://wiki.ros.org/jaguar4x4wheel_description</url> -->


  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


  <export>
  </export>
</package>
