<?xml version="1.0"?>
<package>
  <name>jaguar4x4wheel_description</name>
  <version>0.1.0</version>
  <description>The jaguar4x4wheel_description package</description>

  <author email="vincentrou@gmail.com">Vincent Rousseau</author>

  <maintainer email="vincentrou@gmail.com">Vincent Rousseau</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/jaguar4x4wheel_description</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <!--<run_depend>urg_description</run_depend>-->


  <export>
  </export>
</package>
